faq page changed

--- a/faq.html
+++ b/faq.html
@@ -149,10 +149,9 @@
     <div class="container">
         <div class="section-header text-center">
             <h2>Frequently <span>Asked Questions</span></h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-                in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-                are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden
-                in the middle of text. </p>
+            <p>Airport Access limo & car service, Are a Long Island limo service company providing luxury cars - Sedan, SUV ,
+                affordable Black car rides, professional, dependable, affordable, whether you are looking for car service from Long Island to JFK ,
+                LGA , Newark, Islip Airport, we promise to cater to your tastes.</p>
         </div>
         <div class="row">
             <div class="col-md-4">
@@ -163,24 +162,17 @@
                     <div class="dark-overlay"></div>
                 </div>
                 <div class="faq_text">
-                    <h4>Q1: How can I use LIAccessLimo.com to meet my transportation needs?</h4>
+                    <h4>Q1: How can I use Airport Access limo & car service to meet my transportation needs?</h4>
                     <p>You can use the Request a Quote/Make a Reservation form to
                         Request a Quote, choose vehicles, check availability,
                         make reservations, and/or pay online.</p>
                 </div>
                 <div class="faq_text">
-                    <h4>Q2: What are your Rates?</h4>
-                    <p>Use the Request a Quote/Make a Reservation form to find out. A 10% Web-only
-                        Discount is available if you request a price quote using
-                        our website but is not available if you simply make a
-                        reservation on the phone. (May not apply to revised rates.)</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q3: What is the tipping/gratuity policy?</h4>
+                    <h4>Q2: What is the tipping/gratuity policy?</h4>
                     <p>A 20% tip/gratuity is required.</p>
                 </div>
                 <div class="faq_text">
-                    <h4>Q4: How are bridge/highway/tunnel/other Tolls paid?</h4>
+                    <h4>Q3: How are bridge/highway/tunnel/other Tolls paid?</h4>
                     <p>An All-Inclusive Toll Fee is denoted for many itineraries. If the customer pre-pays
                         an All-Inclusive Toll Fee in advance, this will cover any and all tolls actually passed through
                         during the itinerary.
@@ -193,7 +185,7 @@
                         for your specific itinerary, just let us know.</p>
                 </div>
                 <div class="faq_text">
-                    <h4>Q5: What are the fees/policies for Extra Stops?</h4>
+                    <h4>Q4: What are the fees/policies for Extra Stops?</h4>
                     <p>Here are our policies & fees for extra stops:<br>
 
                         i. "Hourly" itineraries include unlimited unplanned extra stops, within the booked time period,
@@ -217,6 +209,14 @@
                         period or portion thereof, spent making the unplanned extra stop: $25 (for Sedans, Private
                         Minivans, and SUVs), or $50 (for Stretch Limos).</p>
                 </div>
+            </div>
+            <div class="col-md-4">
+                <div class="faq_category white-text about_services_faq">
+                    <div class="div_zindex">
+                        <h3>About <span>Our Services</span></h3>
+                    </div>
+                    <div class="dark-overlay"></div>
+                </div>
                 <div class="faq_text">
                     <h4>Q6: What are the fees/policies for lateness/tardiness by the customer?</h4>
                     <p>You may be required to pay a WAITING FEE in order to receive service if you (A)
@@ -229,70 +229,18 @@
                         the right to CANCEL your pickup with NO REFUND. However, please attempt to
                         contact us as we might be willing to give a partial refund in certain situations.</p>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="faq_category white-text about_services_faq">
-                    <div class="div_zindex">
-                        <h3>About <span>Our Services</span></h3>
-                    </div>
-                    <div class="dark-overlay"></div>
-                </div>
                 <div class="faq_text">
-                    <h4>Q7: What are the fees/policies for rescheduling or changing itinerary details?</h4>
-                    <p>If you request to reschedule or change any details related to your reservation, (A)
-                        If we are able to accommodate your changed plans, we will do so and charge a
-                        rescheduling/change fee of $10. (B) If we are unable to accommodate your changed plans,
-                        your reservation will be considered a cancellation, subject to the cancellation
-                        rules & policies explained on this web page.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q8: What is the Cancellation/Refund Policy?</h4>
-                    <p>If you contact us to cancel more than 72 hours in advance, you will be
+                    <h4>Q7: What is the Cancellation/Refund Policy?</h4>
+                    <p>If you contact us to cancel more than 24 hours in advance, you will be
                         refunded any amount paid minus a cancellation fee. The cancellation
                         fee is $50.00 if you reserved a Luxury or Economy Sedan, Private
                         Minivan, or SUV, or $75.00 if you reserved a Stretch Limo. If you
-                        contact us to cancel less than 72 hours in advance, we reserve the
+                        contact us to cancel less than 24 hours in advance, we reserve the
                         right to give you NO REFUND. However, please contact us as we might
                         be willing to give a partial refund in certain situations.</p>
                 </div>
                 <div class="faq_text">
-                    <h4>Q9: How will I pay for my ride?</h4>
-                    <p>You pay the transportation service provider who will be servicing your request directly.
-                        All service providers accept cash, MasterCard, Visa, American Express, Discover,
-                        and PayPal. Credit card transactions can be processed through PayPal to maintain
-                        the security of your personal information, or over the phone as well.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q10: How will I pay for my ride?</h4>
-                    <p>May I pay using a PayPal "eCheck"?</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q11: Do I need a Customer Account?</h4>
-                    <p>Customer Accounts are NOT required to do business with us.<br>
-
-                        However, you can optionally choose to setup an Account after you complete any
-                        online reservation confirmation. Having an Account will enable you to make future
-                        bookings without the need to type in all of your information again from scratch.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q12: Can you call me to remind me of my pickup?</h4>
-                    <p>Yes! We will gladly place a COURTESY CALL to remind you of your pickup.
-                        (You will get the opportunity to schedule your Courtesy Call during the
-                        confirmation stage of the Reservation Process.)</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q13: What type of vehicles are used for my transportation?</h4>
-                    <p>Town cars, stretch limos and more. (View Photos)</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q14: How many people can fit?</h4>
-                    <p>In general, the number of people designated in the vehicle description can fit. For example,
-                        Up to 3 people can fit in 3-passenger Luxury Sedans. HOWEVER, if there is a large
-                        amount of luggage/ baggage, fewer passengers may be able to fit.There is no
-                        additional per-person charge.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q15: When can I book a pickup?</h4>
+                    <h4>Q8: When can I book a pickup?</h4>
                     <p>You can book your request at any time of the day.
                         However, we strongly recommend that you book a minimum of 24 hours in advance.</p>
                 </div>
@@ -305,69 +253,18 @@
                     <div class="dark-overlay"></div>
                 </div>
                 <div class="faq_text">
-                    <h4>Q16: When can I get picked up?</h4>
+                    <h4>Q9: When can I get picked up?</h4>
                     <p>You can get picked up anytime. We operate 24/7.</p>
                 </div>
                 <div class="faq_text">
-                    <h4>Q17: What types of itineraries are available?</h4>
-                    <p>
-                    <ul>
-                        <li>
-                            One way & round trips involving airport.
-                        </li>
-                        <li>
-                            One way & round trips not involving airport.
-                        </li>
-                        <li>
-                            Hourly service.
-                        </li>
-                    </ul>
-                    NOTE: If you return to your origin within a short time of being
-                    dropped off at your destination, and the driver will need to wait
-                    for you outside, you will be quoted an "hourly" rate, NOT a "round trip" rate.
-                    </p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q18: Where can I request to be picked up/dropped off?</h4>
-                    <p>Request to be picked up and dropped off at a specific street address, such as
-                        123 Maple St, or a specific area, such as LaGuardia Airport. When booking online,
-                        the pickup and dropoff cities can be anywhere in NY, NJ, CT.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q19: What flight info should I enter for airport runs?</h4>
-                    <p>Your Airline, Flight Number, and Flight Time, for example
-                        "American Airlines Flight #1020 Arriving @ 5:25 PM".
-                        This info is required for Arriving flights and recommended for departing flights.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q20: What is the alcohol/ drug policy?</h4>
+                    <h4>Q10: What is the alcohol/ drug policy?</h4>
                     <p>Alcohol consumption or posession is not permitted by ANYONE in the vehicle, if ANY
                         of the passengers are under 21 years of age. Illegal drug consumption or posession by
                         any passenger is not permitted. Breaking these terms is grounds for immediate
                         termination of service for ALL passengers, with NO REFUND.</p>
                 </div>
                 <div class="faq_text">
-                    <h4>Q21: What is the Lost-and-Found policy?</h4>
-                    <p>We are not responsible for any baggage, personal items, or anything
-                        else left behind by passengers in the vehicle. However please contact
-                        us if you have lost an item and we will return it to you if we have found it.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q22: What is the policy on typographical errors with Rates?</h4>
-                    <p>Your quoted rate is not guaranteed until you pay us AND receive an
-                        email confirmation from us stating that the "STATUS" of the Request is "CONFIRMED".
-                        (Note: This is not the same as your instant payment receipt from
-                        PayPal or other online credit card processors.) This is due to rare typographical errors.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q23: What is the Limitation of Liability?</h4>
-                    <p>Unless required by law, under no circumstance shall the transportation
-                        service provider or any of the other parties involved in
-                        the booking be liable to compensate the passenger/customer beyond
-                        refunding the full amount originally paid to the service provider.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q24: What if my question is not answered above?</h4>
+                    <h4>Q11: What if my question is not answered above?</h4>
                     <p>Please contact us or submit your feedback below:</p>
                 </div>
             </div>
