--- a/suv.html
+++ b/suv.html
@@ -131,11 +131,11 @@
     <div class="container">
         <div class="page-header_wrap">
             <div class="page-heading">
-                <h1>FAQ</h1>
+                <h1>Fleet</h1>
             </div>
             <ul class="coustom-breadcrumb">
                 <li><a href="#">Home</a></li>
-                <li>FAQ</li>
+                <li>SUVs</li>
             </ul>
         </div>
     </div>
@@ -143,172 +143,78 @@
     <div class="dark-overlay"></div>
 </section>
 <!-- /Page Header-->
-
-<!--FAQ-->
-<section class="faq section-padding">
+<section class="section-padding">
     <div class="container">
         <div class="section-header text-center">
-            <h2>Frequently <span>Asked Questions</span></h2>
-            <p>Airport Access limo & car service, Are a Long Island limo service company providing luxury cars - Sedan, SUV ,
-                affordable Black car rides, professional, dependable, affordable, whether you are looking for car service from Long Island to JFK ,
-                LGA , Newark, Islip Airport, we promise to cater to your tastes.</p>
+            <h2>Suvs</h2>
         </div>
         <div class="row">
-            <div class="col-md-4">
-                <div class="faq_category white-text knowledge_base_faq">
-                    <div class="div_zindex">
-                        <h3>Knowledge <span>Base</span></h3>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/fleet/1.png" class="img-fluid" alt="image"></a>
                     </div>
-                    <div class="dark-overlay"></div>
-                </div>
-                <div class="faq_text">
-                    <h4>Q1: How can I use Airport Access limo & car service to meet my transportation needs?</h4>
-                    <p>You can use the Request a Quote/Make a Reservation form to
-                        Request a Quote, choose vehicles, check availability,
-                        make reservations, and/or pay online.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q2: What is the tipping/gratuity policy?</h4>
-                    <p>A 20% tip/gratuity is required.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q3: How are bridge/highway/tunnel/other Tolls paid?</h4>
-                    <p>An All-Inclusive Toll Fee is denoted for many itineraries. If the customer pre-pays
-                        an All-Inclusive Toll Fee in advance, this will cover any and all tolls actually passed through
-                        during the itinerary.
-
-                        If the customer does not pre-pay an All-Inclusive Toll Fee in advance,
-                        the passenger will be responsible for paying for any and all tolls actually passed through
-                        during the itinerary, using CASH.
-
-                        NOTE: If you would like us to denote an "All-Inclusive Toll Fee"
-                        for your specific itinerary, just let us know.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q4: What are the fees/policies for Extra Stops?</h4>
-                    <p>Here are our policies & fees for extra stops:<br>
-
-                        i. "Hourly" itineraries include unlimited unplanned extra stops, within the booked time period,
-                        free of charge. The driver is considered to be "On-Call".<br>
-
-                        ii. For all other itinerary types, including one-way and round trip itineraries:<br>
-
-                        a. Extra stops which you specifically mention when you fill out our online reservation form are
-                        considered "PLANNED". Such extra stops are INCLUDED in the rate quote which you receive from us
-                        by email.<br>
-
-                        b. Extra stops which you do NOT specifically mention when you fill out our online reservation
-                        form are considered "UNPLANNED". <br>
-                        For such extra stops:<br>
-
-                        1. The driver reserves the right to decline to make the extra stop.<br>
-                        2. The driver reserves the right to charge an extra fee for the extra stop.<br>
-                        3. The fee for the extra stop is due at the time the extra stop is requested.<br>
-                        4. Fees collected by drivers for unplanned extra stops are NOT considered a tip/gratuity.<br>
-                        5. The fee is left to the discretion of the driver, but is generally as follows, per half-hour
-                        period or portion thereof, spent making the unplanned extra stop: $25 (for Sedans, Private
-                        Minivans, and SUVs), or $50 (for Stretch Limos).</p>
-                </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Luxury Sedan:3 passengers</a></h5>
+                        <p>Classic black Sedans are reliable, dependable and comfortable.
+                            These late-model Town Cars…</p>
+                        <a href="#" class="btn-link">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    </div>
+                </article>
             </div>
-            <div class="col-md-4">
-                <div class="faq_category white-text about_services_faq">
-                    <div class="div_zindex">
-                        <h3>About <span>Our Services</span></h3>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/fleet/2.png" class="img-fluid" alt="image"></a>
                     </div>
-                    <div class="dark-overlay"></div>
-                </div>
-                <div class="faq_text">
-                    <h4>Q6: What are the fees/policies for lateness/tardiness by the customer?</h4>
-                    <p>You may be required to pay a WAITING FEE in order to receive service if you (A)
-                        take more than FORTY-FIVE (45) MINUTES to reach your driver from the time that your
-                        flight lands, or (B) are more than TEN (10) minutes late for your pickup from any
-                        non-airport location. The waiting fee is $50 for Economy or Luxury Sedans, Private
-                        Minivans, or SUVs, or $75 for Stretch Limousines, per one (1) hour or fraction thereof.
-
-                        If you are more than SIXTY (60) MINUTES LATE for your pickup, we reserve
-                        the right to CANCEL your pickup with NO REFUND. However, please attempt to
-                        contact us as we might be willing to give a partial refund in certain situations.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q7: What is the Cancellation/Refund Policy?</h4>
-                    <p>If you contact us to cancel more than 24 hours in advance, you will be
-                        refunded any amount paid minus a cancellation fee. The cancellation
-                        fee is $50.00 if you reserved a Luxury or Economy Sedan, Private
-                        Minivan, or SUV, or $75.00 if you reserved a Stretch Limo. If you
-                        contact us to cancel less than 24 hours in advance, we reserve the
-                        right to give you NO REFUND. However, please contact us as we might
-                        be willing to give a partial refund in certain situations.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q8: When can I book a pickup?</h4>
-                    <p>You can book your request at any time of the day.
-                        However, we strongly recommend that you book a minimum of 24 hours in advance.</p>
-                </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Midsize SUV:4 passengers</a></h5>
+                        <p>For groups of 4 or groups with a bit of extra luggage,
+                            our affordable and efficient yet spacious midsize SUV…</p>
+                        <a href="#" class="btn-link">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    </div>
+                </article>
             </div>
-            <div class="col-md-4">
-                <div class="faq_category white-text support_faq">
-                    <div class="div_zindex">
-                        <h3>Support <span>Forum</span></h3>
+            <div class="col-md-4 col-sm-4">
+                <article class="blog-list">
+                    <div class="blog-info-box">
+                        <div class="share_article">
+                            <p><i class="fa fa-share-alt" aria-hidden="true"></i></p>
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            </ul>
+                        </div>
+                        <a href="#"><img src="assets/images/fleet/3.png" class="img-fluid" alt="image"></a>
                     </div>
-                    <div class="dark-overlay"></div>
-                </div>
-                <div class="faq_text">
-                    <h4>Q9: When can I get picked up?</h4>
-                    <p>You can get picked up anytime. We operate 24/7.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q10: What is the alcohol/ drug policy?</h4>
-                    <p>Alcohol consumption or posession is not permitted by ANYONE in the vehicle, if ANY
-                        of the passengers are under 21 years of age. Illegal drug consumption or posession by
-                        any passenger is not permitted. Breaking these terms is grounds for immediate
-                        termination of service for ALL passengers, with NO REFUND.</p>
-                </div>
-                <div class="faq_text">
-                    <h4>Q11: What if my question is not answered above?</h4>
-                    <p>Please contact us or submit your feedback below:</p>
-                </div>
+                    <div class="blog-content">
+                        <h5><a href="#">Luxury Suv:6 passengers</a></h5>
+                        <p>Great for winter weather conditions, passengers that want extra space,
+                            or tremendous luggage capacity…</p>
+                        <a href="#" class="btn-link">Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+                    </div>
+                </article>
             </div>
         </div>
     </div>
 </section>
-<!-- /FAQ-->
-
-<!--Contact-us-->
-<section class="contact_us mb-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h3>Question/Comment Form:</h3>
-                <p>(Provide contact info if you want a reply.)</p>
-                <div class="contact_form gray-bg">
-                    <form action="#" method="get">
-                        <div class="form-group">
-                            <label class="control-label">Full Name <span>*</span></label>
-                            <input type="text" class="form-control white_bg" id="fullname">
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Email Address <span>*</span></label>
-                            <input type="email" class="form-control white_bg" id="emailaddress">
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Phone Number <span>*</span></label>
-                            <input type="text" class="form-control white_bg" id="phonenumber">
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Message <span>*</span></label>
-                            <textarea class="form-control custom-height white_bg" rows="4"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button class="btn" type="submit">Send Message <span class="angle_arrow"><i
-                                    class="fa fa-angle-right" aria-hidden="true"></i></span></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- /Contact-us-->
 
 <!--Footer -->
 <footer>
