--- a/contact-us.html
+++ b/contact-us.html
@@ -99,8 +99,8 @@
                         <li><a href="faq.html">FAQ</a></li>
                         <li class="dropdown"><a href="#" data-bs-toggle="dropdown" aria-expanded="false">Fleet</a>
                             <ul class="dropdown-menu">
-                                <li><a href="fleet.html">Sedans</a></li>
-                                <li><a href="fleet.html">SUVs</a></li>
+                                <li><a href="sedan.html">Sedans</a></li>
+                                <li><a href="suv.html">SUVs</a></li>
                             </ul>
                         </li>
                         <li>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="header_wrap margin-remove" style="font-size: 30px;">
-                    <div class="login_btn btn"><i class="fa fa-phone" aria-hidden="true"></i> +1 631-375-0700</div>
+                    <div class="login_btn btn"><i class="fa fa-phone" aria-hidden="true"></i> +1 631-691-8502</div>
                 </div>
             </div>
         </div>
@@ -181,16 +181,16 @@
                     <ul>
                         <li>
                             <div class="icon_wrap"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-                            <div class="contact_info_m">PO Box 1025MNO Collins Street West Victoria 8007 Australia</div>
+                            <div class="contact_info_m">Long Island - NY</div>
                         </li>
                         <li>
                             <div class="icon_wrap"><i class="fa fa-phone" aria-hidden="true"></i></div>
-                            <div class="contact_info_m"><a href="tel:61-1234-567-90">+61-123-456-789</a></div>
+                            <div class="contact_info_m"><a href="tel:61-1234-567-90">+631-691-8502</a></div>
                         </li>
                         <li>
                             <div class="icon_wrap"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
                             <div class="contact_info_m"><a
-                                    href="mailto:contact@exampleurl.com">contact@exampleurl.com</a></div>
+                                    href="mailto:contact@exampleurl.com">liaccesslimo1@gmail.com</a></div>
                         </li>
                     </ul>
                     <div class="map_wrap">
@@ -216,7 +216,8 @@
                 <div class="col-md-3 col-sm-6">
                     <ul>
                         <li><a href="quote-reservation.html">Quotes/Reservations</a></li>
-                        <li><a href="fleet.html">Fleet</a></li>
+                        <li><a href="sedan.html">Sedan</a></li>
+                        <li><a href="suv.html">SUVs</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
