--- a/sedan.html
+++ b/sedan.html
@@ -99,8 +99,8 @@
                         <li><a href="faq.html">FAQ</a></li>
                         <li class="dropdown"><a href="#" data-bs-toggle="dropdown" aria-expanded="false">Fleet</a>
                             <ul class="dropdown-menu">
-                                <li><a href="fleet.html">Sedans</a></li>
-                                <li><a href="fleet.html">SUVs</a></li>
+                                <li><a href="sedan.html">Sedans</a></li>
+                                <li><a href="suv.html">SUVs</a></li>
                             </ul>
                         </li>
                         <li>
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="header_wrap margin-remove" style="font-size: 30px;">
-                    <div class="login_btn btn"><i class="fa fa-phone" aria-hidden="true"></i> +1 631-375-0700</div>
+                    <div class="login_btn btn"><i class="fa fa-phone" aria-hidden="true"></i> +1 631-691-8502</div>
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
             </div>
             <ul class="coustom-breadcrumb">
                 <li><a href="#">Home</a></li>
-                <li>Fleet</li>
+                <li>Sedan</li>
             </ul>
         </div>
     </div>
@@ -146,7 +146,7 @@
 <section class="section-padding">
     <div class="container">
         <div class="section-header text-center">
-            <h2>Fleet</h2>
+            <h2>Sedan</h2>
         </div>
         <div class="row">
             <div class="col-md-4 col-sm-4">
@@ -228,7 +228,8 @@
                 <div class="col-md-3 col-sm-6">
                     <ul>
                         <li><a href="quote-reservation.html">Quotes/Reservations</a></li>
-                        <li><a href="fleet.html">Fleet</a></li>
+                        <li><a href="sedan.html">Sedan</a></li>
+                        <li><a href="suv.html">SUVs</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6">
